added header & headshot images

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@
 title: AliLynne
 author: Ali Thompson
 email: alilynne.thompson@gmail.com
+headshot: assets/me.jpg
 description: > # this means to ignore newlines until "twitter_username:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. 
