--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ author: Ali Thompson
 email: alilynne.thompson@gmail.com
 headshot: assets/me.jpg
 description: > # this means to ignore newlines until "twitter_username:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. 
+  I have a passion for creating websites that are accessible to all. 
 # social links
 twitter_username: alilynnet
 github_username:  alilynne
