--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ googleplus_username: +jekyll
 #   instance: example.com
 
 
-show_excerpts: false # set to true to show excerpts on the homepage
+show_excerpts: true # set to true to show excerpts on the homepage
 
 # Bright date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
